full-moon/tests/cfxlua_cases/fail/parser/subtraction_assignment_operator/source.lua
local ten = 10
-= 5
